# geospatial-studio-ui

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  404.html  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  THIRD-PARTY-LICENCES.txt  build.sh  copy-libs.sh  cypress.config.js  dev.sh  docker-entrypoint.sh  index.html  openapi.json  package.json  web-test-runner.config.mjs
.github/: PULL_REQUEST_TEMPLATE.md
api-reference/: index.html
app/: index.css  index.html
architecture_and_requirements/: index.html
dataset-factory/: index.html
dataset-factory-service/: index.html
deploy/: start_haproxy_althttpd.sh  start_nginx.sh
docs/: BASE_LAYER_CONFIGURATION.md  CELESTIAL_BODY_BASE_LAYERS_SUMMARY.md  README.md  pyproject.toml
docs/geospatial-studio-docs/: mkdocs.yml
docs/geospatial-studio-docs/docs/: api-reference.md  architecture_and_requirements.md  dataset-factory-service.md  dataset-factory.md  fine-tuning-service.md  getting-started-SDK.md  getting-started-UI.md  index.md  inference-lab.md  inference-service.md  tuning-studio.md  walkthroughs.md
docs/geospatial-studio-docs/docs/walkthroughs/Flooding/: GeospatialStudio-Walkthrough-Flooding-instructions.md
docs/geospatial-studio-docs/docs/walkthroughs/Wildfire-BurnScars/: BurnScars-instructions.md
fine-tuning-service/: index.html
getting-started-SDK/: index.html
getting-started-UI/: index.html
inference-lab/: index.html
inference-service/: index.html
tuning-studio/: index.html
walkthroughs/: index.html
(+153 files in other folders)
